fixed navbar bottom gap problem

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -121,10 +121,11 @@ body, html {
     padding-bottom: 0px;
     padding-top: 0px;
     font-weight: 900;
+    font-size: 23.5px;
 }
 
 #emaprLogoImg{
-    height: 35px;
+    height: 34px;
     width: auto;
 }
 
